--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,16 +17,16 @@
         <section>
             <menu>
                 <nav><a href="https://github.com/forEachLoopz" target="_blank"><img title="Visiter mon GitHub"
-                            src="./media/img/github-logo_icon-icons.com_73546.svg"
+                            src="/media/img/github-logo_icon-icons.com_73546.svg"
                             alt="Logo"> GitHub</a></nav>
                 <nav><a href="https://juliolgs.itch.io/" target="_blank"><img title="Visiter mon Itch.io"
-                            src="./media/img/itch_io_icon_198115.svg" alt="Logo">
+                            src="/media/img/itch_io_icon_198115.svg" alt="Logo">
                         Itch.io</a></nav>
                 <nav><a href="https://bisrian.bandcamp.com/" target="_blank"><img title="Visiter mon BandCamp"
-                            src="./media/img/brand_bandcamp_icon_158983.svg" alt="Logo">
+                            src="/media/img/brand_bandcamp_icon_158983.svg" alt="Logo">
                         BandCamp</a></nav>
                 <nav><a href="https://www.youtube.com/@Studio_Petillant" target="_blank"><img title="Visiter la chaîne du collectif"
-                            src="./media/img/YOUTUBE_icon-icons.com_65487.svg"
+                            src="/media/img/YOUTUBE_icon-icons.com_65487.svg"
                             alt="Logo"> YouTube</a></nav>
             </menu>
         </section>
