--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,34 +9,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="body">
     <header>
         <h1>Portfolio</h1>
     </header>
-    <main>
+    <main id="main">
         <section>
+            <button class="lightDarkButton" onclick='darkLight()' id="lightDarkButton">Light</button>
             <menu>
-                <nav><a href="https://github.com/forEachLoopz" target="_blank"><img title="Visiter mon GitHub"
-                            src="/media/img/github-logo_icon-icons.com_73546.webp"
-                            alt="Logo"> GitHub</a></nav>
-                <nav><a href="https://juliolgs.itch.io/" target="_blank"><img title="Visiter mon Itch.io"
-                            src="/media/img/itch_io_icon_198115.webp" alt="Logo">
-                        Itch.io</a></nav>
-                <nav><a href="https://bisrian.bandcamp.com/" target="_blank"><img title="Visiter mon BandCamp"
-                            src="/media/img/brand_bandcamp_icon_158983.webp" alt="Logo">
-                        BandCamp</a></nav>
-                <nav><a href="https://www.youtube.com/@Studio_Petillant" target="_blank"><img title="Visiter la chaîne du collectif"
-                            src="/media/img/YOUTUBE_icon-icons.com_65487.webp"
-                            alt="Logo"> YouTube</a></nav>
+                <nav><a href="https://github.com/forEachLoopz" target="_blank" class="midText">GitHub</a></nav>
+                <nav><a href="https://juliolgs.itch.io/" target="_blank" class="midText">Itch.io</a></nav>
+                <nav><a href="https://bisrian.bandcamp.com/" target="_blank" class="midText">BandCamp</a></nav>
+                <nav><a href="https://www.youtube.com/@Studio_Petillant" target="_blank" class="midText">YouTube</a></nav>
             </menu>
         </section>
-    </main>
-    <audio controls>
-        <source src="./media/audio/InnerWar.mp3" type="audio/mpeg">
-    </audio>
-    <footer>
 
+    </main>
+    <div class="promoButtons">
+        <button class="audioButton" id="audioButton">Stream / Buy "Inner War"</button>
+        <button class="audioButton" id="youtubeBisrian">See Bisrian's YouTube channel</button>
+        
+    </div>
+    <footer class="footer" id="footer">
+        <audio controls>
+            <source src="./media/audio/InnerWar.mp3" type="audio/mpeg">
+        </audio>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
