--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,6 +36,7 @@
         </audio>
     </footer>
     <script src="script.js"></script>
+    <script src="background.js"></script>
 </body>
 
 </html>
