--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,9 +31,8 @@
         
     </div>
     <footer class="footer" id="footer">
-        <audio controls>
-            <source src="./media/audio/InnerWar.mp3" type="audio/mpeg">
-        </audio>
+
+        <p id="mousePos">0, 0</p>
     </footer>
     <script src="script.js"></script>
     <script src="background.js"></script>
