--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,7 +29,7 @@
     </main>
 
     <div class="promoButtons">
-        <button class="audioButton" id="audioButton">Stream / Buy "Inner War"</button>
+        <button class="audioButton" id="audioButton">Stream / Buy "Underground Dogs"</button>
 
         <button class="audioButton" id="youtubeBisrian">See Bisrian's YouTube channel</button>
     </div>        
@@ -40,8 +40,6 @@
         
     </footer>
     <script src="script.js"></script>
-    <script src="background.js"></script>
-
 
 </body>
 
