--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <button class="audioButton" id="audioButton">Stream / Buy "Underground Dogs"</button>
 
         <button class="audioButton" id="youtubeBisrian">See Bisrian's YouTube channel</button>
+
+        <button class="audioButton" id="websiteBisrian">See Bisrian's website</button>
+
     </div>        
 
     <footer class="footer" id="footer">
