--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id="body">
     <header>
-        <h1><a href="" id="title">Portfolio</a></h1>
+        <h1><a href="" id="title">forEachLoopz</a></h1>
     </header>
     <div class="options" id="options">
         <button class="lightDarkButton" id="lightDarkButton">🌞</button>
@@ -27,23 +27,14 @@
             </menu>
         </section>
     </main>
-
     <div class="promoButtons">
         <button class="audioButton" id="audioButton">Stream / Buy "Underground Dogs"</button>
-
         <button class="audioButton" id="youtubeBisrian">See Bisrian's YouTube channel</button>
-
         <button class="audioButton" id="websiteBisrian">See Bisrian's website</button>
-
     </div>        
-
-    <footer class="footer" id="footer">
-
+        <footer class="footer" id="footer">
         <p class="credits">Fabriqué par <a href="https://github.com/forEachLoopz">forEach</a></p>
-        
     </footer>
     <script src="script.js"></script>
-
 </body>
-
 </html>
