--- a/index.html
+++ b/index.html
@@ -19,21 +19,19 @@
     <main id="main">
         <section id="section">
             <menu>
-                <p class="time" id="time"></p>
                 <nav><a href="https://github.com/forEachLoopz" target="_blank" class="midText">💻 GitHub</a></nav>
                 <nav><a href="https://juliolgs.itch.io/" target="_blank" class="midText">🎮 Itch.io</a></nav>
                 <nav><a href="https://bisrian.bandcamp.com/" target="_blank" class="midText">🎵 BandCamp</a></nav>
-                <nav><a href="https://www.youtube.com/@Studio_Petillant" target="_blank" class="midText">📷 YouTube</a></nav>
             </menu>
         </section>
     </main>
     <div class="promoButtons">
         <button class="audioButton" id="audioButton">Stream / Buy "Underground Dogs"</button>
         <button class="audioButton" id="youtubeBisrian">See Bisrian's YouTube channel</button>
-        <button class="audioButton" id="websiteBisrian">See Bisrian's website</button>
-    </div>        
+        </div>        
         <footer class="footer" id="footer">
         <p class="credits">Fabriqué par <a href="https://github.com/forEachLoopz">forEach</a></p>
+        <p class="mail">valentindrouilletcontact@gmail.com</p>
     </footer>
     <script src="script.js"></script>
 </body>
