--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id="body">
     <header>
-        <h1><a href="" id="title">forEachLoopz</a></h1>
+        <h1><a href="" id="title">Valentin Drouillet</a></h1>
     </header>
     <div class="options" id="options">
         <button class="lightDarkButton" id="lightDarkButton">🌞</button>
@@ -19,7 +19,7 @@
     <main id="main">
         <section id="section">
             <menu>
-                <nav><a href="https://github.com/forEachLoopz" target="_blank" class="midText">💻 GitHub</a></nav>
+                <nav><a href="https://github.com/juliolegrandsage" target="_blank" class="midText">💻 GitHub</a></nav>
                 <nav><a href="https://juliolgs.itch.io/" target="_blank" class="midText">🎮 Itch.io</a></nav>
                 <nav><a href="https://bisrian.bandcamp.com/" target="_blank" class="midText">🎵 BandCamp</a></nav>
             </menu>
@@ -27,10 +27,10 @@
     </main>
     <div class="promoButtons">
         <button class="audioButton" id="audioButton">Stream / Buy "Underground Dogs"</button>
-        <button class="audioButton" id="youtubeBisrian">See Bisrian's YouTube channel</button>
+        <button class="audioButton" id="youtubeBisrian"><a href="https://www.youtube.com/@bisrianmusic"></a>See Bisrian's YouTube channel</button>
         </div>        
         <footer class="footer" id="footer">
-        <p class="credits">Fabriqué par <a href="https://github.com/forEachLoopz">forEach</a></p>
+        <p class="credits">Fabriqué par <a href="https://github.com/juliolegrandsage">Valentin Drouillet</a></p>
         <p class="mail">valentindrouilletcontact@gmail.com</p>
     </footer>
     <script src="script.js"></script>
